--- a/_styles/_components/_sample-list.styl
+++ b/_styles/_components/_sample-list.styl
@@ -31,20 +31,21 @@
       margin-top 0
       margin-bottom 0
 .sample-list--details
-  padding-right 50px
   position relative
-  .sample-list &:after
-    content ""
-    width 25px
-    height 25px
-    border-style solid
-    border-width 5px 5px 0 0
-    border-color rgba(0,0,0,0.15)
-    transform rotate(45deg) translateY(-22px)
-    transform-origin 0 0
-    position absolute
-    right 10px
-    top 50%
+  .sample-list &
+    padding-right 50px
+    &:after
+      content ""
+      width 25px
+      height 25px
+      border-style solid
+      border-width 5px 5px 0 0
+      border-color rgba(0,0,0,0.15)
+      transform rotate(45deg) translateY(-22px)
+      transform-origin 0 0
+      position absolute
+      right 10px
+      top 50%
   @media $medium
     flex-grow 3
     flex-shrink 3
@@ -52,10 +53,12 @@
     padding-left 6%
     top 10px
     .sample-list & a:after,
-    .sample &:after
-      content ""
-      display table
-      clear both
+    .sample &
+      padding-right 50px    
+      &:after
+        content ""
+        display table
+        clear both
 .sample-list--title
   font-weight bold
   margin-bottom 0.5em
