--- a/_styles/_components/_sample.styl
+++ b/_styles/_components/_sample.styl
@@ -2,8 +2,8 @@
 
 .sample--intro
   position relative
-  padding-top 5%
-  padding-bottom 5%
+  padding-top 10%
+  padding-bottom 10%
   theme(background-color, 'secondary-light', @($theme) {
     darken(saturate($theme, 3), 6)
   })
@@ -42,6 +42,8 @@
     border-radius 2px
     border-color rgba(0,0,0,0.15)
   @media $medium
+    padding-top 5%
+    padding-bottom 5%
     .sample-list--image img
       margin-top 0
       margin-bottom 0
