--- a/_styles/_reset.styl
+++ b/_styles/_reset.styl
@@ -2,11 +2,12 @@
 
 *, *:before, *:after
   box-sizing border-box
+body
+  overflow-x hidden
 body, html
   margin 0
   width 100%
   height 100%
-  overflow-x hidden
 ul, li
   list-style none
   margin 0
